tests/NormalTests/paczka1/fuzzy1/68152126.err
Error in line 8: En4761o S936 16,2
Error in line 7: 5zeph0 S422 71,9
Error in line 11: 5zeph0 S551 2,6
Error in line 19: OXBjZt S936 99,5
Error in line 15: AIR7WzI S936 38,9
Error in line 27: CPobpnkZ S422 32,0
Error in line 28: 5zeph0 S936 411,8
